--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "even"]
   path = themes/even
-  url = https://github.com/olOwOlo/hugo-theme-even themes/event
+  url = https://github.com/olOwOlo/hugo-theme-even
