added deploy.sh and baseUrl to config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313/"
+baseURL = "https://rmcodor.github.io"
 languageCode = "en"
 defaultContentLanguage = "en"                            
 title = "Essence - Modernizing Learning"
@@ -110,7 +110,7 @@ copyright = "Remario Richards"            # default: author.name ↓
 
   uglyURLs = false          # please keep same with uglyurls setting
 
-  [params.publicCDN]        # load these files from public cdn                          # 启用公共CDN，需自行定义
+  [params.publicCDN]        # load these files from public cdn                     
     enable = true
     jquery = '<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>'
     slideout = '<script src="https://cdn.jsdelivr.net/npm/slideout@1.0.1/dist/slideout.min.js" integrity="sha256-t+zJ/g8/KXIJMjSVQdnibt4dlaDxc9zXr/9oNPeWqdg=" crossorigin="anonymous"></script>'
